hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__static_array__test__static_array_const_codegen@pre-mem2reg@llvm20_2.snap
---
source: hugr-llvm/src/extension/collections/static_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@sa.c.d2dddd66.0 = constant { i64, [10 x i1] } { i64 10, [10 x i1] [i1 true, i1 false, i1 true, i1 false, i1 true, i1 false, i1 true, i1 false, i1 true, i1 false] }

define private ptr @_hl.main.1() {
alloca_block:
  %"0" = alloca ptr, align 8
  %"5_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr @sa.c.d2dddd66.0, ptr %"5_0", align 8
  %"5_01" = load ptr, ptr %"5_0", align 8
  store ptr %"5_01", ptr %"0", align 8
  %"02" = load ptr, ptr %"0", align 8
  ret ptr %"02"
}
